--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -1,4 +1,3 @@
-/* General Styles */
 body {
     font-family: 'Roboto', sans-serif;
     color: #ffffff;
@@ -14,12 +13,11 @@ body {
 .header {
     background-color: #BFBBB8;
     color: #dadada;
-    padding: 0px 200px;
+    padding: 0 200px;
     border-bottom: 3px solid #324a5e;
     display: flex;
     align-items: center;
     justify-content: center;
-    position: relative;
 }
 
 .logo {
@@ -30,20 +28,82 @@ body {
 .logo img {
     height: 80px;
 }
+
+.container {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+
+
+}
+
+.my-post-panel {
+    background-color: #f9f9f9;
+    padding: 26px;
+}
+
+
+.custom-post-item {
+    font-size: smaller;
+    background-color: #fff;
+    transition: transform 0.2s;
+    color: #fff;
+    border: 1px solid #324a5e;
+    padding: 10px;
+    width: 350px;
+
+
+
+}
+
+
+.custom-post-item:hover {
+    transform: translateX(15px);
+    text-decoration: none;
+    color: #ffffff;
+    background-color: #688a91;
+
+}
+
+.custom-link {
+    color: #007bff;
+    font-weight: bold;
+    text-decoration: none;
+}
+.text-title{
+    color: red;
+}
+
+.custom-link:hover {
+    text-decoration: underline;
+}
+
+
+input[type="text"], textarea {
+    width: calc(100% - 10px);
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+textarea {
+    height: 100px;
+}
+/*
 .ui-button-raised {
-    background-color: #324a5e; /* Cambia el color de fondo */
-    color: white; /* Cambia el color del texto */
-    border: none; /* Elimina el borde */
-    border-radius: 5px; /* Bordes redondeados */
-    padding: 10px 20px; /* Espaciado interno */
-    font-size: 16px; /* Tamaño de fuente */
-    cursor: pointer; /* Cambia el cursor al pasar el mouse */
+    background-color: #324a5e;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
 }
 
 .ui-button-raised:hover {
-    background-color: #BFBBB8; /* Color de fondo al pasar el mouse */
-}
-
+    background-color: #BFBBB8;
+}*/
 
 .footer {
     border-top: 3px solid #000000;
@@ -64,14 +124,4 @@ body {
     flex-grow: 1;
 }
 
-
-.container{
-    position: relative;
-
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-
-
-}
 
